Write tests for js file and html file

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,10 @@
 	<title>Set The Mood</title>
 </head>
 <body>
-	<h1>HElloooooooo Set the MOooood</h1>
+	<nav>
+	<h1>Set the Mood</h1>
+	</nav>
+	
 	<script src="main.js"></script>
 </body>
 </html>
