send out first ajax using vanilla js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,18 @@
 	<title>Set The Mood</title>
 </head>
 <body>
-	<nav>
 	<h1>Set the Mood</h1>
-	</nav>
-	
+
+	<h2>Choose your mood</h2>
+	<h4>New Country</h4>
+	<h4>Regge</h4>
+	<h4>Rock</h4>
+	<h4>Rnb</h4>
+	<h4>Old Country</h4>
+	<h4>Classical</h4>
+	<h4>Hip Hop</h4>
+	<h4>Indie</h4>
+	<h4>Oldies</h4>
 	<script src="main.js"></script>
 </body>
 </html>
