Spotify login successful

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<h1>Set the Mood</h1>
-
+	
+	<h2><a href ="/auth/spotify">Log in with spotify</a></h2>
 	<h2>Choose your mood</h2>
 	<h4>New Country</h4>
 	<h4>Regge</h4>
